@@ -16,11 +16,14 @@ import com.mbcms.model.Promotion;
 import com.mbcms.model.Seat;
 import com.mbcms.model.Showtime;
 import com.mbcms.service.BookingService;
+import com.mbcms.service.FoodService;
 import com.mbcms.service.NotificationService;
+import com.mbcms.service.impl.FoodServiceImpl;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
+import java.time.ZoneOffset;
 import java.util.*;
 
 /**
@@ -34,26 +37,52 @@ public class BookingServiceImpl implements BookingService {
 
     private static final double VIP_SURCHARGE = 0.30;
 
-    private final BookingDAO bookingDao = new BookingDAOImpl();
-    private final SeatDAO seatDao = new SeatDAOImpl();
-    private final ShowtimeDAO showtimeDao = new ShowtimeDAOImpl();
-    private final PromotionDAO promoDao = new PromotionDAOImpl();
-    private final NotificationService notificationService = new NotificationServiceImpl();
+    public BookingServiceImpl() {
+        this.bookingDao = new BookingDAOImpl();
+        this.seatDao = new SeatDAOImpl();
+        this.showtimeDao = new ShowtimeDAOImpl();
+        this.promoDao = new PromotionDAOImpl();
+        this.notificationService = new NotificationServiceImpl();
+        this.foodService = new FoodServiceImpl();
+    }
+
+    /** Constructor for unit tests (inject mocks). */
+    BookingServiceImpl(BookingDAO bookingDao, SeatDAO seatDao, ShowtimeDAO showtimeDao,
+            PromotionDAO promoDao, NotificationService notificationService) {
+        this(bookingDao, seatDao, showtimeDao, promoDao, notificationService, new FoodServiceImpl());
+    }
+
+    BookingServiceImpl(BookingDAO bookingDao, SeatDAO seatDao, ShowtimeDAO showtimeDao,
+            PromotionDAO promoDao, NotificationService notificationService, FoodService foodService) {
+        this.bookingDao = bookingDao;
+        this.seatDao = seatDao;
+        this.showtimeDao = showtimeDao;
+        this.promoDao = promoDao;
+        this.notificationService = notificationService;
+        this.foodService = foodService;
+    }
+
+    private final BookingDAO bookingDao;
+    private final SeatDAO seatDao;
+    private final ShowtimeDAO showtimeDao;
+    private final PromotionDAO promoDao;
+    private final NotificationService notificationService;
+    private final FoodService foodService;
 
     // ── validatePromoCode ─────────────────────────────────────────────────
     @Override
-    public Promotion validatePromoCode(String code, BigDecimal subtotal) {
-        if (code == null || code.isBlank()) {
+    public Promotion validatePromoCode(String code, BigDecimal subtotal, BigDecimal concessionsSubtotal) {
+        if (code == null || code.trim().isEmpty()) {
             return null;
         }
 
-        Promotion p = promoDao.findByCode(code.trim());
+        Promotion p = promoDao.findByCode(code.trim().toUpperCase());
         if (p == null) {
             return null;
         }
 
-        LocalDateTime now = LocalDateTime.now();
-        if (!p.isActive()) {
+        LocalDateTime now = LocalDateTime.now(ZoneOffset.UTC);
+        if (!p.isActive() || !"Active".equals(p.getStatus())) {
             throw new IllegalArgumentException("This promo code has been deactivated.");
         }
         if (p.getValidFrom() != null && now.isBefore(p.getValidFrom())) {
@@ -76,7 +105,7 @@ public class BookingServiceImpl implements BookingService {
     // ── createPendingBooking ──────────────────────────────────────────────
     @Override
     public Booking createPendingBooking(String customerUsername, long showtimeId,
-            List<Long> seatIds, String promoCode, String notes) {
+            List<Long> seatIds, String promoCode, String notes, BigDecimal concessionsSubtotal) {
         if (seatIds == null || seatIds.isEmpty()) {
             throw new IllegalArgumentException("Please select at least one seat.");
         }
@@ -86,12 +115,7 @@ public class BookingServiceImpl implements BookingService {
 
         // Lấy showtime
         Showtime st = showtimeDao.findById(showtimeId);
-        if (st == null) {
-            throw new IllegalArgumentException("Showtime not found.");
-        }
-        if (!"SCHEDULED".equals(st.getStatus())) {
-            throw new IllegalArgumentException("This showtime is no longer available.");
-        }
+        validateShowtimeForBooking(st);
 
         // Lấy seats để tính surcharge – dùng List<Seat> từ seatDao
         List<Seat> allSeats = seatDao.findByRoom(st.getRoomId());
@@ -99,12 +123,27 @@ public class BookingServiceImpl implements BookingService {
         for (Seat s : allSeats) {
             seatMap.put(s.getSeatId(), s);
         }
-        BigDecimal subtotal = calcSubtotal(seatIds, seatMap, st.getBasePrice());
+
+        for (Long seatId : seatIds) {
+            Seat seat = seatMap.get(seatId);
+            if (seat == null || seat.getRoomId() != st.getRoomId()) {
+                throw new IllegalArgumentException("Invalid seat selection.");
+            }
+            if (!seat.isActive()) {
+                throw new IllegalArgumentException(
+                        "Seat " + seat.getRowLabel() + seat.getColNumber() + " is unavailable.");
+            }
+        }
+
+        BigDecimal ticketsSubtotal = calcSubtotal(seatIds, seatMap, st.getBasePrice());
 
         // Validate promo
-        Promotion promo = validatePromoCode(promoCode, subtotal);
-        BigDecimal discount = promo != null ? calcDiscount(promo, subtotal) : BigDecimal.ZERO;
-        BigDecimal total = subtotal.subtract(discount).max(BigDecimal.ZERO);
+        Promotion promo = validatePromoCode(promoCode, ticketsSubtotal, concessionsSubtotal);
+        BigDecimal discount = promo != null ? calcDiscount(promo, ticketsSubtotal) : BigDecimal.ZERO;
+        
+        BigDecimal totalConcessions = concessionsSubtotal != null ? concessionsSubtotal : BigDecimal.ZERO;
+        BigDecimal subtotal = ticketsSubtotal.add(totalConcessions);
+        BigDecimal total = ticketsSubtotal.subtract(discount).max(BigDecimal.ZERO).add(totalConcessions);
 
         // Tạo Booking model
         Booking booking = new Booking();
@@ -141,7 +180,9 @@ public class BookingServiceImpl implements BookingService {
         Booking confirmed = bookingDao.findByIdWithSeats(bookingId);
         if (confirmed != null && confirmed.getPromoId() != null) {
             try {
-                promoDao.incrementUsedCount(confirmed.getPromoId());
+                if (!promoDao.incrementUsedCount(confirmed.getPromoId())) {
+                    System.err.println("WARN: Promo usage limit reached for promo_id=" + confirmed.getPromoId());
+                }
             } catch (Exception e) {
                 System.err.println("WARN: Không tăng được promo used_count: " + e.getMessage());
             }
@@ -174,8 +215,69 @@ public class BookingServiceImpl implements BookingService {
     }
 
     @Override
-    public boolean updateBookingTotals(long bookingId, BigDecimal newSubtotal, BigDecimal newTotalAmount) {
-        return bookingDao.updateBookingTotals(bookingId, newSubtotal, newTotalAmount);
+    public boolean isPendingHoldExpired(long bookingId) {
+        return bookingDao.isPendingHoldExpired(bookingId);
+    }
+
+    @Override
+    public boolean updateBookingTotals(long bookingId, String customerUsername,
+            BigDecimal newSubtotal, BigDecimal discountAmount, BigDecimal newTotalAmount) {
+        Booking b = bookingDao.findById(bookingId);
+        if (b == null) {
+            return false;
+        }
+        if (!b.getCustomerUsername().equals(customerUsername)) {
+            throw new SecurityException("You are not allowed to update this booking.");
+        }
+        if (!Booking.STATUS_PENDING.equals(b.getStatus())) {
+            return false;
+        }
+        if (isPendingHoldExpired(bookingId)) {
+            return false;
+        }
+        return bookingDao.updateBookingTotals(bookingId, newSubtotal, discountAmount, newTotalAmount);
+    }
+
+    @Override
+    public boolean recalculateTotalsWithFood(long bookingId, String username,
+            Map<Long, Integer> foodItems) {
+        Booking b = getBookingDetail(bookingId, username);
+        if (b == null || !Booking.STATUS_PENDING.equals(b.getStatus())) {
+            return false;
+        }
+        if (isPendingHoldExpired(bookingId)) {
+            return false;
+        }
+
+        Showtime st = showtimeDao.findById(b.getShowtimeId());
+        if (st == null) {
+            return false;
+        }
+
+        List<Long> seatIds = b.getSeatIds();
+        if (seatIds == null || seatIds.isEmpty()) {
+            return false;
+        }
+
+        List<Seat> allSeats = seatDao.findByRoom(st.getRoomId());
+        Map<Long, Seat> seatMap = new HashMap<>();
+        for (Seat s : allSeats) {
+            seatMap.put(s.getSeatId(), s);
+        }
+
+        BigDecimal ticketsSubtotal = calcSubtotal(seatIds, seatMap, st.getBasePrice());
+        BigDecimal foodSubtotal = foodService.computeValidatedFoodSubtotal(foodItems);
+
+        Promotion promo = null;
+        if (b.getPromoId() != null) {
+            promo = promoDao.findById(b.getPromoId());
+        }
+        BigDecimal discount = promo != null ? calcDiscount(promo, ticketsSubtotal) : BigDecimal.ZERO;
+
+        BigDecimal subtotal = ticketsSubtotal.add(foodSubtotal);
+        BigDecimal total = ticketsSubtotal.subtract(discount).max(BigDecimal.ZERO).add(foodSubtotal);
+
+        return updateBookingTotals(bookingId, username, subtotal, discount, total);
     }
 
     // ── getBookingHistory / getBookingDetail ──────────────────────────────
@@ -208,47 +310,66 @@ public class BookingServiceImpl implements BookingService {
         }
         return bookingDao.findTicket(bookingId);
     }
+
     @Override
-    public Booking createCounterBooking(Booking booking, List<Long> seatIds, String promoCode) {
+    public BookingTicket getTicketForBranch(long bookingId, long branchId) {
+        BookingTicket ticket = bookingDao.findTicket(bookingId);
+        if (ticket == null) {
+            return null;
+        }
+        if (ticket.getBranchId() != branchId) {
+            throw new SecurityException("Booking not in your branch.");
+        }
+        return ticket;
+    }
+    @Override
+    public Booking createCounterBooking(Booking booking, List<Long> seatIds, String promoCode, BigDecimal concessionsSubtotal) {
         if (seatIds == null || seatIds.isEmpty()) {
             throw new IllegalArgumentException("Vui lòng chọn ít nhất 1 ghế.");
         }
         if (seatIds.size() > 8) {
             throw new IllegalArgumentException("Tối đa 8 ghế mỗi lần đặt.");
         }
-        // 1. Luon set mac dinh guest01 cho khach vang lai mua tai quay
-        booking.setCustomerUsername("guest01");
 
-        // 2. Ap dung ma khuyen mai neu co
-        Long promoId = null;
-        BigDecimal discount = BigDecimal.ZERO;
-        if (promoCode != null && !promoCode.trim().isEmpty()) {
-            Promotion promo = promoDao.findByCode(promoCode.trim().toUpperCase());
-            if (promo != null && promo.isActive() && "Active".equals(promo.getStatus())) {
-                BigDecimal minAmt = promo.getMinOrderAmount();
-                // Kiem tra gia tri don hang toi thieu
-                if (minAmt == null || booking.getSubtotal().compareTo(minAmt) >= 0) {
-                    promoId = promo.getPromoId();
-                    if (Promotion.TYPE_PERCENT.equals(promo.getDiscountType())) {
-                        discount = booking.getSubtotal()
-                                .multiply(promo.getDiscountValue())
-                                .divide(BigDecimal.valueOf(100), 0, java.math.RoundingMode.HALF_UP);
-                    } else if (Promotion.TYPE_FIXED_AMOUNT.equals(promo.getDiscountType())) {
-                        discount = promo.getDiscountValue();
-                    }
+        Showtime st = showtimeDao.findById(booking.getShowtimeId());
+        validateShowtimeForBooking(st);
 
-                    // Khong duoc giam nhieu hon gia tri don hang
-                    if (discount.compareTo(booking.getSubtotal()) > 0) {
-                        discount = booking.getSubtotal();
-                    }
-                }
+        // Validate ghe: phai thuoc dung phong cua showtime va dang active
+        // (chong dat ghe sai phong / ghe inactive o luong quay tien mat).
+        List<Seat> roomSeats = seatDao.findByRoom(st.getRoomId());
+        Map<Long, Seat> counterSeatMap = new HashMap<>();
+        for (Seat s : roomSeats) {
+            counterSeatMap.put(s.getSeatId(), s);
+        }
+        for (Long seatId : seatIds) {
+            Seat seat = counterSeatMap.get(seatId);
+            if (seat == null || seat.getRoomId() != st.getRoomId()) {
+                throw new IllegalArgumentException("Ghế không hợp lệ cho suất chiếu này.");
+            }
+            if (!seat.isActive()) {
+                throw new IllegalArgumentException(
+                        "Ghế " + seat.getRowLabel() + seat.getColNumber() + " không khả dụng.");
             }
         }
-        booking.setPromoId(promoId);
-        booking.setDiscountAmount(discount);
-        booking.setTotalAmount(booking.getSubtotal().subtract(discount));
 
-        // 3. Goi DAO ghi nhan Booking + Seats + CASH Payment trong 1 transaction
+        String customerUsername = booking.getCustomerUsername();
+        if (customerUsername == null || customerUsername.trim().isEmpty()) {
+            customerUsername = "guest01";
+        }
+        booking.setCustomerUsername(customerUsername.trim());
+
+        BigDecimal ticketsSubtotal = booking.getSubtotal();
+
+        Promotion promo = validatePromoCode(promoCode, ticketsSubtotal, concessionsSubtotal);
+        BigDecimal discount = promo != null ? calcDiscount(promo, ticketsSubtotal) : BigDecimal.ZERO;
+
+        BigDecimal totalConcessions = concessionsSubtotal != null ? concessionsSubtotal : BigDecimal.ZERO;
+
+        booking.setPromoId(promo != null ? promo.getPromoId() : null);
+        booking.setDiscountAmount(discount);
+        booking.setSubtotal(ticketsSubtotal.add(totalConcessions));
+        booking.setTotalAmount(ticketsSubtotal.subtract(discount).max(BigDecimal.ZERO).add(totalConcessions));
+
         return bookingDao.createCounterBooking(booking, seatIds);
     }
 
@@ -264,6 +385,18 @@ public class BookingServiceImpl implements BookingService {
     }
 
     // ── Private helpers ───────────────────────────────────────────────────
+    private void validateShowtimeForBooking(Showtime st) {
+        if (st == null) {
+            throw new IllegalArgumentException("Showtime not found.");
+        }
+        if (!"SCHEDULED".equals(st.getStatus())) {
+            throw new IllegalArgumentException("This showtime is no longer available.");
+        }
+        if (st.getStartTime().isBefore(LocalDateTime.now(ZoneOffset.UTC))) {
+            throw new IllegalArgumentException("Cannot book a showtime in the past.");
+        }
+    }
+
     private BigDecimal calcSubtotal(List<Long> selectedIds,
             Map<Long, Seat> seatMap,
             BigDecimal basePrice) {
